# web-scraper

./: Cargo.toml  config.json  stores.json
src/: app.rs  main.rs
src/models/: mod.rs  product.rs  store.rs
src/scraping/: mod.rs  scraper.rs  selectors.rs
src/ui/: mod.rs  results_tab.rs  search_tab.rs  store_tab.rs
src/utils/: file_manager.rs  mod.rs
